Update API, new functions
